findBook